--- a/package.json
+++ b/package.json
@@ -23,7 +23,12 @@
     "bootstrap": "^3.3.7",
     "core-js": "^2.5.4",
     "firebase": "^5.1.0",
+    "gulp": "^3.9.1",
+    "jquery": "^3.3.1",
+    "jshint": "^2.9.5",
+    "popper": "^1.0.1",
     "rxjs": "^6.0.0",
+    "startbootstrap-grayscale": "^4.1.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
